--- a/src/css/style.css
+++ b/src/css/style.css
@@ -67,18 +67,80 @@ body {
 
 .menu-form .menu li a:hover {
     background-color: #F1B2B2;
-
     padding: 15px;
     border-radius: 50px;
 }
 
 
-.menu-form .form {
 
+.menu-para-hamburguer nav {
+    width: 60px;
+    height: 60px;
+    align-self: flex-end;
+}
+
+ nav label{
+    display: flex;
+    flex-direction: column;
+}
+
+.hamburguer {
+    background-color: #fff;
+    position: relative;
+    display: block;
+    width: 30px;
+    height: 2px;
+    top: 29px;
+    left: 15px;
+    transition: 0.5s ease-in-out;
+
+}
+
+.hamburguer:before,
+.hamburguer:after {
+    background-color: #fff;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transition: 0.2s ease-in-out;
+}
+
+.hamburguer:before {
+    top: -10px;
+}
+
+.hamburguer:after {
+    bottom: -10px;
+}
+
+#menu-hamburguer,
+.hamburguer {
+    display: none;
+}
+
+
+
+.menu-form .form {
     width: 450px;
     height: 550px;
     background-color: #fff;
     border-radius: 50px;
+}
+
+input:checked~label .hamburguer {
+    transform: rotate(45deg);
+}
+
+input:checked~label .hamburguer:before {
+    transform: rotate(90deg);
+    top: 0;
+}
+
+input:checked~label .hamburguer:after {
+    transform: rotate(90deg);
+    bottom: 0;
 }
 
 .form {
@@ -98,6 +160,7 @@ body {
 }
 
 .form input {
+    font-size: 2rem;
     width: 100%;
     height: 40px;
     border-color: #D9D9D9;
@@ -177,6 +240,16 @@ body {
     margin-left: 50rem;
 }
 
+.livros .imagem-livraria {
+    width: 30%;
+    height: 20%;
+    margin-left: 5rem;
+}
+
+.livros-com-imagem-livaria {
+    display: flex;
+}
+
 .livros .livros-da-semana {
     display: flex;
     width: 100%;
@@ -189,22 +262,30 @@ body {
     align-items: center;
 }
 
-.livros .imagem-livraria {
-    width: 30%;
-    height: 20%;
-    margin-left: 5rem;
-}
-
-.livros img {
+.livros-da-semana img {
     height: 280px;
     width: 200px;
     margin-right: 25px;
+    border-radius: 3px;
 }
 
-.livros img:hover {
+.livros-da-semana img:hover {
     opacity: 0.5;
     padding: 1rem;
-    transition: 0.5s;
+    transition: 0.2s;
+}
+
+.livros-nacionais img {
+    height: 280px;
+    width: 200px;
+    margin-right: 25px;
+    border-radius: 3px;
+}
+
+.livros-nacionais img:hover {
+    opacity: 0.5;
+    padding: 1rem;
+    transition: 0.2s;
 }
 
 .footer {
@@ -221,29 +302,67 @@ body {
     color: #45496A;
 }
 
-
-@media(max-width:450px) {
+@media(max-width:900px) {
     body {
         background-size: cover;
+        width: 100vw;
+        height: 100vh;
     }
 
     .logo-name .logo {
-        height: 10%;
+        width: 5rem;
+        height: 5rem;
+        margin: 30px 20px;
     }
 
     .logo-name .name {
         display: flex;
-        margin-left: 50px;
-        font-size: 20px;
-        color: #45496A;
+        margin-left: 9rem;
+        font-size: 40px;
+        color: #fff;
+        width: 3rem;
+        text-align: left;
+        margin-top: 10rem;
+    }
+    
+    .hamburguer {
+        display: block;
+        margin-top: 10px;
+    }
+   
+    .menu-form nav ul li {
+        display: none;
+        width: 10rem;
     }
 
     .menu-form .menu {
         display: flex;
         flex-direction: column;
         font-size: 20px;
-        margin-right: 250px;
         margin-top: 5px;
+    }
+
+    nav input:checked~ul li {
+        display: block;
+    }
+
+    .menu-form nav {
+        position: absolute;
+        top: 15px;
+        right: 0;
+        z-index: 1;
+        width: 15rem;
+    }
+
+    .menu-form nav ul{
+        background-color: #F1B2B2;
+        border-radius: 20px;
+    }
+
+    .menu-form nav ul a {
+        text-align: left;
+        padding: 15px 15px;
+        display: block;
     }
 
     .menu-form .form {
@@ -253,17 +372,16 @@ body {
         margin-right: 250px;
         height: 50%;
         width: 80%;
+        margin-top: 50rem;
     }
 
-    .form .junte-se{
-       padding: 10px;
+    .form .junte-se {
+        padding: 10px;
         font-size: 20px;
     }
 
-    .form .input{
+    .form .input {
         font-size: 5px;
     }
-    .form button{
-        
-    }
+
 }
